     thus breaking localization of subsequent strings (bug #22962).
   * Fixed special _initial.cfg and _final.cfg file inclusion order not being
     honored by Windows builds using Boost.filesystem (bug #22967).
   * Fixed dotfiles being included when {including} directories in WML, on
     builds using the new filesystem code (regression introduced in 1.11.19).
 * Miscellaneous and bug fixes:
   * Fixed non-ASCII characters in the user's path prevent
     BfW to launch on windows (bug #22983)
   * Fixed wesnoth doesn't start on some systems related to non utf8 default locales.
     http://forums.wesnoth.org/viewtopic.php?f=4&t=41268
   * Fixed hotkeys for changing tips in titlescreen (bug #18926).
   * Made toggeling delayed shroud updates impossible when it's not your turn becasue it causes OOS.
 * Music:
   * Changed main menu track to Transience.

Version 1.12.0:
 * Language and i18n:
   * Updated translations: German, Russian
   * Fixed encoding and other issues with the system default language option
     on builds using Boost.locale (bugs #22921, #22928).
 * User interface:
   * Fixed lower button row padding for GUI1 dialogs including Statistics and
     the Add-ons Manager (bugs #22379, #22791).
 * Miscellaneous and bug fixes:
   * Fixed recursive directory creation failing for working dir-relative paths
     without an explicit `./` at the start (e.g. in `wesnoth -p data/core foo`)
     for builds using Boost.filesystem.
   * Disable start of scenario saves in MP, "fixing" bug #22068.

Version 1.11.19:
 * Campaigns:
   * Legend of Wesmere:
     * Ka’lian under attack: fixed more issues due to new map size.
     * Ka’lian under attack: fixed two issues with fog. This fixes bug #22880.
     * Elves Last Stand: fixed not all elvish leaders being able to recruit.
     * Elves Last Stand: fixed bugs in Olurf and Olurf's party arrival.
     * Bounty Hunters: fixed several coordinate issues due to new map size.